fixed hidden icon flex wrap

--- a/css/popup.css
+++ b/css/popup.css
@@ -19,7 +19,7 @@
     flex-wrap: wrap;
     border: none;
     background-color: white;
-    width: 2.3rem;
+    width: 2.2rem;
     height: 100%;
     visibility: visible;
     transform: translateX(-12.2rem);
@@ -28,8 +28,8 @@
 }
 
 #hidden_icon button{
-    width: 2.3rem;
-    height: 2.3rem;
+    width: 2.2rem;
+    height: 2.2rem;
     border: none;
     background: transparent;
    
